Fixed margin error on iOS on footer.

--- a/webroot/themes/chrisfulton/css/global-styles.css
+++ b/webroot/themes/chrisfulton/css/global-styles.css
@@ -187,6 +187,12 @@ ul.menu--main.nav
 	font-size: 0.7em;
 }
 
+.footer .row
+{
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 .darker-footer a
 {
 	color: #555;
